--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<ul class="social list-inline">
 					<li class="list-inline-item"><a href="https://github.com/danieleperera" target="_blank"><i class="fab fa-github-alt"></i></a></li>
 					<li class="list-inline-item"><a href="https://gitlab.com/danieleperera" target="_blank"><i class="fab fa-gitlab"></i></a></li>
-					<li class="list-inline-item"><a href="https://gitlab.com/danieleperera" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+					<li class="list-inline-item"><a href="https://www.linkedin.com/in/daniele-perera" target="_blank"><i class="fab fa-linkedin"></i></a></li>
 				</ul>
 			</div>
 			
