--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<li class="item">
 											<span class="title"><strong>Bash / Linux Terminal</strong></span>
 											 <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i>
-										</li>
+								</li>
 								<li class="item">
 									<span class="title"><strong>Python <a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=c4120ad89407399350f041cd454629cc0ea21412" target="_blank"><i class="fas fa-certificate" style="color:#7095d1;"></i></a>
 									<br class="visible-sm visible-xs"/> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></i> </span>
@@ -146,7 +146,15 @@
 								<li class="item">
 									<span class="title"><strong>VMware vSphere 6.5 Foundations <a href="https://www.youracclaim.com/badges/de63ccca-64d6-48a0-81d7-3ef38618b16b/linked_in_profile" target="_blank"><i class="fas fa-certificate"style="color:#7095d1;"></i></a></strong></span>
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
-								</li>	
+								</li>
+								<li class="item">
+									<span class="title"><strong>SQL Fundamentals <a href="https://www.sololearn.com/Certificate/1060-11760385/pdf/" target="_blank"><i class="fas fa-certificate"style="color:#7095d1;"></i></a></strong></span>
+									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+								</li>
+								<li class="item">
+									<span class="title"><strong>Windows Server 2016 </strong></span>
+									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
+								</li>			
 								
 								<li class="item">
 									<span class="level">Certificates or Open bagdes = <i class="fas fa-certificate" style="color:#7095d1;"></i></span><br>
