--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Daniele Perera">
 	<link rel="apple-touch-icon" sizes="57x57" href="assets/images/fav/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="assets/images/fav/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/images/fav/apple-icon-72x72.png">	
+  	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/fav/apple-icon-72x72.png">	
 	<link rel="apple-touch-icon" sizes="76x76" href="assets/images/fav/apple-icon-76x76.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="assets/images/fav/apple-icon-114x114.png">
 	<link rel="apple-touch-icon" sizes="120x120" href="assets/images/fav/apple-icon-120x120.png">
@@ -23,6 +23,8 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="assets/images/fav/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/fav/favicon-16x16.png">
 	<link rel="manifest" href="assets/images/fav/manifest.json">
+	<!-- Thumbnail -->
+	<link rel="image_src" href="assets/images/apple-apple-devices-business-205316.jpg">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
