--- a/index.html
+++ b/index.html
@@ -248,4 +248,6 @@
 	<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 	
 </body>
+<!-- Hidden MSG -->
+<!-- dHJ5IGFnYWluICEhIEhJTlQgOiBmaXJzdCB1c2UgZWJnMTMgdG8gZGVjb2RlIHRoZSBzdHJpbmcg==ITucplOcplO0nTHtnTyxMTIhVT1yp3AuM2HtqT8toKxtp2Iwo25xVTqcqTu1LvOuL2AiqJ50VNcbqUEjpmbiY2qcqTu1Lv5wo20iGKVgHQAlpax= -->
 </html>
