updated thumbnail for linkedin

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Portfolio">
 	<meta name="author" content="Daniele Perera">
+	<!-- Thumbnail for linkedin and facebook -->
 	<meta property="og:title" content="Daniele Perera" />
 	<meta property="og:type" content="Portfolio" />
-	<!-- Thumbnail -->
-	<link rel="image_src" href="assets/images/apple-apple-devices-business-205316.jpg">
+	<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/test.png">
 	<link rel="apple-touch-icon" sizes="57x57" href="assets/images/fav/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="assets/images/fav/apple-icon-60x60.png">
   	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/fav/apple-icon-72x72.png">	
