--- a/test2.html
+++ b/test2.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="image" property="og:image" content="<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/test2.png">">
-<meta http-equiv="refresh" content="0; url=https://medium.com/@danieleperera" />
+  <title>Daniele Perera</title>
+	<!-- Meta -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Portfolio">
+	<meta name="author" content="Daniele Perera">
+	<!-- Thumbnail for linkedin and facebook -->
+	<meta property="og:title" content="Daniele Perera" />
+	<meta property="og:type" content="Portfolio" />
+  <meta name="image" property="og:image" content="<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/test2.png">">
+  <meta http-equiv="refresh" content="0; url=https://medium.com/@danieleperera" />
 </head>
 <body>
 
