--- a/test2.html
+++ b/test2.html
@@ -12,7 +12,7 @@
 	<meta property="og:title" content="Daniele Perera" />
 	<meta property="og:type" content="Portfolio" />
   <meta name="image" property="og:image" content="<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/test2.png">">
-  <meta http-equiv="refresh" content="0; url=https://medium.com/@danieleperera" />
+  <meta http-equiv="refresh" content="url=https://medium.com/@danieleperera" />
 </head>
 <body>
 test
