--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Thumbnail for linkedin and facebook -->
 	<meta property="og:title" content="Daniele Perera" />
 	<meta property="og:type" content="Portfolio" />
-	<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/test.png">
+	<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/portfolio.png">
 	<link rel="apple-touch-icon" sizes="57x57" href="assets/images/fav/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="assets/images/fav/apple-icon-60x60.png">
   	<link rel="apple-touch-icon" sizes="72x72" href="assets/images/fav/apple-icon-72x72.png">	
