--- a/test3.html
+++ b/test3.html
@@ -11,7 +11,7 @@
 	<!-- Thumbnail for linkedin and facebook -->
 	<meta property="og:title" content="Daniele Perera" />
 	<meta property="og:type" content="Portfolio" />
-  <meta name="image" property="og:image" content="<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/cv.png">">
+  	<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/cv.png">
   <meta http-equiv="refresh" content="url=https://drive.google.com/file/d/1Z1Gtciy6gLJPd2dI2baMLXPVNX-iUQqY/view?usp=sharing" />
 </head>
 <body>
