--- a/cv.html
+++ b/cv.html
@@ -11,11 +11,11 @@
 	<!-- Thumbnail for linkedin and facebook -->
 	<meta property="og:title" content="Daniele Perera" />
 	<meta property="og:type" content="Portfolio" />
-  <meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/cv1.png">
+  	<meta name="image" property="og:image" content="https://danieleperera.github.io/assets/images/cv1.png">
   
 </head>
 <body>
+	<iframe src="https://drive.google.com/file/d/1Z1Gtciy6gLJPd2dI2baMLXPVNX-iUQqY/preview" width="100%" height="900px" frameborder="0"></iframe>
 	
-	<iframe src="http://docs.google.com/gview?url=https://danieleperera.github.io/assets/images/cv.pdf&embedded=true" style="width:100%; height:800px;" frameborder="0"></iframe>
 </body>
 </html>
