updated cybary python certificate

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 											 <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
 								</li>
 								<li class="item">
-									<span class="title"><strong>Python <a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=c4120ad89407399350f041cd454629cc0ea21412" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
+									<span class="title"><strong>Python <a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=c4120ad89407399350f041cd454629cc0ea21412" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a><a href="https://goo.gl/pfo2WZ" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
 									<br class="visible-sm visible-xs"/> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
