updated title field for certs in index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 	a:visited { color:#434343; text-decoration: none; }
 	a:hover { color:#434343; text-decoration: none; }
 	a:active { color:#434343; text-decoration: none; }
+	.tooltip {position: relative;display: inline-block;}
+	.tooltip .tooltiptext {visibility: hidden;width: 120px;background-color: black;color: #fff;text-align: center;border-radius: 6px;padding: 5px 0;position: absolute;z-index: 1;}
+	.tooltip:hover .tooltiptext {visibility: visible;}
 </style>
 
 <body>
@@ -159,19 +162,19 @@
 											 <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
 								</li>
 								<li class="item">
-									<span class="title"><strong>Python <a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=c4120ad89407399350f041cd454629cc0ea21412" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a><a href="https://goo.gl/pfo2WZ" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
+									<span class="title"><strong>Python <a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=c4120ad89407399350f041cd454629cc0ea21412" title="Certificate: Fast Web Digital Academy - Python" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a><a href="https://goo.gl/pfo2WZ" title="Certificate: Cybray - Python for Security Professionals"target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
 									<br class="visible-sm visible-xs"/> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
-									<span class="title"><strong>Cisco Routing and Switching <a href="https://drive.google.com/file/d/1N3vsV2aA6A1cyB7DTx6x86krNEYRdaRP/view?usp=sharing" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a></strong></span>
+									<span class="title"><strong>Cisco Routing and Switching <a href="https://drive.google.com/file/d/1N3vsV2aA6A1cyB7DTx6x86krNEYRdaRP/view?usp=sharing" title="Certiciate: CISCO - ICDN1 (CCNA 1)"target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a></strong></span>
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="far fa-star"></i></span>
 								</li>		
 								<li class="item">
-									<span class="title"><strong>VMware vSphere 6.5 Foundations <a href="https://www.youracclaim.com/badges/de63ccca-64d6-48a0-81d7-3ef38618b16b/linked_in_profile" target="_blank"><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
+									<span class="title"><strong>VMware vSphere 6.5 Foundations <a href="https://www.youracclaim.com/badges/de63ccca-64d6-48a0-81d7-3ef38618b16b/linked_in_profile" target="_blank" title="Certificate: VMware vSphere 6.5 Foundations "><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
-									<span class="title"><strong>SQL Fundamentals <a href="https://www.sololearn.com/Certificate/1060-11760385/pdf/" target="_blank"><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
+									<span class="title"><strong>SQL Fundamentals <a href="https://www.sololearn.com/Certificate/1060-11760385/pdf/" target="_blank" title="Certificate: Solo Learn - SQL Fundamentals"><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
@@ -218,7 +221,7 @@
 									<span class="level">High<br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> </span>
 								</li>
 								<li class="item">
-									<span class="title"><strong>English:</strong><a href="https://drive.google.com/file/d/140CGHEzEWWzmgZQAz5qW5UcoLNh4fMhk/view?usp=sharing" target="_blank"><i class="fas fa-award"style="color:#7095d1;"></i></a></span>
+									<span class="title"><strong>English:</strong><a href="https://drive.google.com/file/d/140CGHEzEWWzmgZQAz5qW5UcoLNh4fMhk/view?usp=sharing" target="_blank" title="Certificate: Cambridge University - FCE(FIRST B2)"><i class="fas fa-award"style="color:#7095d1;"></i></a></span>
 									<span class="level"><br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								
