--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
 							</div>
 						</div>
 				</section>
+
+
+
 				<section class="experience section">
 					<div class="section-inner">
-						<h2 class="heading">Project/Work Experience</h2>
+						<h2 class="heading">Work Experience</h2>
 							<div class="content">
 							<div class="item">
 									<h3 class="title">Internship -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Dipartimento di musicologia e beni culturali</a></span> <span class="year">(01/2015 - 03/2015)</span></h3>
@@ -107,42 +110,25 @@
 						</div>
 					</div>
 				</section>
-				<section class="latest section">
-						<div class="section-inner">
+				<section class="blog section">
+					<div class="section-inner">
+						<h2 class="heading">Blog Posts</h2>
+							<div class="content">
+							<div class="item">
+									<h3 class="title">Internship -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Dipartimento di musicologia e beni culturali</a></span> <span class="year">(01/2015 - 03/2015)</span></h3>
 
+							</div>
+							<div class="item">
+									<h3 class="title">Project Manager & Web Developer -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Università Cattolica</a></span> <span class="year">(04/2015 - 06/2015)</span></h3>
+							</div>
+							<div class="item">
+								<h3 class="title">Internship - <span class="place"><a href="https://www.polimi.it/" target="_blank">Politecnico Milano</a></span> <span class="year">(06/2015 - 07/2015)</span></h3>
+						</div>
 
-							<h2 class="heading">Blog in Italian</h2>
-							<a href="https://medium.com/@danieleperera/hai-detto-hacking-pi-per-caso-1abb1a3287c1" target="_blank">
-								<div class="card" >
-								<h4>Hai detto Hacking Pi per caso ?</h4>
-								<h8>May 11 2018</h8>
-								<p>5 min read</p>
-								<p>In questo blog vorrei parlarvi di “Hacking” e introdurre un piccolo progetto DIY a tema. Appena sentiamo parlare di Hacking ci vengono in mente gli Anonymous, quelli cattivi, quelli che combattono la guerra cibernetica rintanati in sgabuzzini bui e circondati da schermi e tastiere e cavi… </p>
-								</div>
-							</a>
-							<a href="https://medium.com/@danieleperera/navigare-in-rete-senza-le-pubblicit%C3%A0-invasive-%C3%A8-possibile-95a8ba0e077b" target="_blank">
-								<div class="card">
-								<h4>Navigare in rete senza le pubblicità invasive… è possibile!</h4>
-								<h8>Apr 30 2018</h8>
-								<p>4 min read</p>
-								<p>So che magari avrete già “Ad blocker” e vi starete chiedendo a cosa serve un DIY per bloccare le pubblicità quando si può comodamente installare una estensione su Chrome o qualunque altro brower che vi permette di fare lo stesso lavoro, con pochi e semplici click...</p>
-								</div>
-							</a>
-							<a href="https://medium.com/@danieleperera/si-pu%C3%B2-proteggere-i-dati-personali-in-rete-a943ad237f67" target="_blank">
-								<div class="card">
-								<h4>Si può proteggere i dati personali in rete ?</h4>
-								<h8>Apr 25 2018</h8>
-								<p>4 min read</p>
-								<p>Avete presente le notizie di furto di dati personali ad opera i “hacker” malintenzionati che li rendono poi pubblici? Ormai la questione non riguarda solo personaggi VIP, ma tutti noi: di questi tempi, nessun dato sensibile è veramente al sicuro, e questo può avere effetti disastrosi sulla nostra sicurezza e privacy.Ma non disperate...</p>
-								</div>
-							</a>
 
 						</div>
-					</section>
-
-
-
-
+					</div>
+				</section>
 			</div>
 			<div class="secondary col-lg-4 col-12">
 				<aside class="info aside section">
@@ -151,7 +137,7 @@
 						<div class="content">
 							<ul class="list-unstyled">
 								<li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Milano, IT</li>
-								<li><i class="fas fa-envelope"></i><span class="sr-only">Personal Email:</span><a href="#">danieleperera@gmail.com</a></li>
+								<li><i class="fas fa-envelope"></i><span class="sr-only">Personal Email:</span><a href="#">daniele.perera@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
@@ -235,22 +221,6 @@
 				</aside>
 				<aside class="education aside section">
 					<div class="section-inner">
-						<h2 class="heading">Currently Reading</h2>
-						<div class="content">
-							<div class="item">
-								<h3 class="title">Windows Internals</h3>
-								<h4 class="university">Mark E. Russinovich</h4>
-							</div>
-							<div class="item">
-								<h3 class="title">The Art of Exploitation</h3>
-								<h4 class="university">Jon Erickson</h4>
-							</div>
-
-						</div>
-					</div>
-				</aside>
-				<aside class="education aside section">
-					<div class="section-inner">
 						<h2 class="heading">Hack The Box<br><h6><span class="year">Ranking</span></h6></h2>
 
 						<div class="content">
@@ -260,6 +230,38 @@
 					</div>
 				</aside>
 			</div>
+<div class="row">
+	<div class="primary col-lg-12 col-12">
+		<section class="blog section">
+					<div class="section-inner">
+						<h2 class="heading">Learning and Reading</h2>
+						<p>These are books I read. My review and opinion about some of them can be found in blog posts.</p>
+<div class="flex-container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+    <div>4</div>
+      <div>5</div>  
+        <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+    <div>4</div>
+      <div>5</div>  
+        <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+    <div>4</div>
+      <div>5</div>  
+        <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+    <div>4</div>
+      <div>5</div>
+</div>
+					</div>
+				</section>
+	</div>
+</div>			
 		</div>
 	</div>
 	<footer class="footer">
