--- a/index.html
+++ b/index.html
@@ -35,21 +35,37 @@
 	<!-- FontAwesome JS -->
 	<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
 	<!-- Global CSS -->
-	<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
 </head>
-<style type="text/css" media="screen">
-	a:link { color:#434343; text-decoration: none; }
-	a:visited { color:#434343; text-decoration: none; }
-	a:hover { color:#434343; text-decoration: none; }
-	a:active { color:#434343; text-decoration: none; }
-	.tooltip {position: relative;display: inline-block;}
-	.tooltip .tooltiptext {visibility: hidden;width: 120px;background-color: black;color: #fff;text-align: center;border-radius: 6px;padding: 5px 0;position: absolute;z-index: 1;}
-	.tooltip:hover .tooltiptext {visibility: visible;}
-</style>
 
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<div class="container clearfix">
+  <a class="navbar-brand" href="#">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="cheatsheets.html"><i class="fas fa-bookmark fa-sm"></i> Cheatsheets</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="research.html"><i class="fas fa-cogs fa-sm"></i> Research</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="projects.html"><i class="fas fa-folder-open fa-sm"></i> Projects</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="blog.html"><i class="fas fa-lightbulb fa-sm"></i> Blog</a>
+      </li>
+    </ul>
+  </div>
+</div> <!-- end container -->
+</nav>
 	<header class="header">
 		<div class="container clearfix">
 			<img class="profile-image img-fluid float-left" src="assets/images/profile.png" width="180" height="180" alt="Daniele Perera" />
@@ -89,47 +105,52 @@
 						<h2 class="heading">Work Experience</h2>
 							<div class="content">
 							<div class="item">
+									<h3 class="title">Cyber Threat Intelligence Analyst  <span class="place"><a href="https://www.reply.com/it/" target="_blank">- reply</a></span> <span class="year">(08/2019 - now)</span></h3>
+									<p>Currently, I'm working on cyber threat intelligence, security monitoring, investigation, and incident
+response projects. My main tasks are the following.
+<ul>
+				<li>Osint investigations</li>
+				<li>Email Analysis</li>
+<li>Vulnerability Management</li>
+<li>Development of internal tools/frameworks</li>
+<li>Management of a security news bulletin sent to CISOs and IT teams in more than thirty countries.</li>
+</ul>
+I'm building a custom framework to manage multiple worldwide entities: this to monitor websites,
+leaks, etc.
+
+							</div>
+							<div class="item">
+									<h3 class="title">Cyber Security Analyst  <span class="place"><a href="https://cybaze.it/" target="_blank">- cybaze</a></span> <span class="year">(02/2019 - 08/2019)</span></h3>
+									<p>I worked in a 24/7 SOC team. I learned to gather information and analyze them to correlate those data to threats/incidents from the data provided by SIEM / IDS or external sources, this also taught me how to detect false positives and investigate relevant incidents.
+												<ul>
+												<li>I automated the threat hunting process using python.<a href="https://github.com/danieleperera/SocAnalystArsenal" target="_blank">link</a></li>
+												<li>I managed to index 2.5 TB of breached collections into a single sqlite3 database. <a href="https://github.com/danieleperera/clean_breach" target="_blank">link</a></li>
+												<li>I attended a 3-day training session for CyberSecurity Analysts and I had the change to work both Windows and Linux environments.</li>
+												</ul>
+							</div>
+							<div class="item">
+									<h3 class="title">Web Developer -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Università Cattolica</a></span> <span class="year">(06/2015 - 09/2015)</span></h3>
+									<p>I participated in a project work aimed at the creation of a website about typical food of Cremona.
+											As I'm keen on digital instruments, I was entrusted with the interface planning, using HTML, CSS, JavaScript and a feedback collection system, by an online poll platform.
+											<br>You can check the website from this <a href="http://www.sildad.it/sito_4Blsa_Torriani/sito.html" target="_blank">link</a></p>
+							</div>
+							<div class="item">
+								<h3 class="title">Internship - <span class="place"><a href="https://www.polimi.it/" target="_blank">Politecnico Milano</a></span> <span class="year">(04/2015 - 06/2015)</span></h3>
+								<p>Internship in html and jquery language at the Polytechnic University of Milan, Cremona.Develop good problem solving and communication skills, improving active listening skills and gaining greater confidence in relationships with project supervisors, tutors and colleagues.</p>
+						</div>
+
+							<div class="item">
 									<h3 class="title">Internship -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Dipartimento di musicologia e beni culturali</a></span> <span class="year">(01/2015 - 03/2015)</span></h3>
 									<p>Training internship in cinematography at the Department of Musicology and Cultural Heritage Cremona office, aimed at finalizing a short film about the city of Cremona
 
 											<br>You can check the video from this <a href="http://www.youtube.com/watch?v=CVyySwbU15E" target="_blank">link</a></p>
 									<p>Participation as an actor and editor, improving team working skills thanks to the coordination of the 7 working groups.</p>
 							</div>
-							<div class="item">
-									<h3 class="title">Project Manager & Web Developer -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Università Cattolica</a></span> <span class="year">(04/2015 - 06/2015)</span></h3>
-									<p>I participated in a project work aimed at the creation of a website about typical food of Cremona.
-											As I'm keen on digital instruments, I was entrusted with the interface planning, using HTML, CSS, JavaScript and a feedback collection system, by an online poll platform.
-											<br>You can check the website from this <a href="http://www.sildad.it/sito_4Blsa_Torriani/sito.html" target="_blank">link</a></p>
-							</div>
-							<div class="item">
-								<h3 class="title">Internship - <span class="place"><a href="https://www.polimi.it/" target="_blank">Politecnico Milano</a></span> <span class="year">(06/2015 - 07/2015)</span></h3>
-								<p>Internship in html and jquery language at the Polytechnic University of Milan, Cremona.Develop good problem solving and communication skills, improving active listening skills and gaining greater confidence in relationships with project supervisors, tutors and colleagues.</p>
-						</div>
-
 
 						</div>
 					</div>
 				</section>
-				<section class="blog section">
-					<div class="section-inner">
-						<h2 class="heading">Blog Posts</h2>
-							<div class="content">
-							<div class="item">
-									<h3 class="title">Internship -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Dipartimento di musicologia e beni culturali</a></span> <span class="year">(01/2015 - 03/2015)</span></h3>
-
-							</div>
-							<div class="item">
-									<h3 class="title">Project Manager & Web Developer -  <span class="place"><a href="http://musicologia.unipv.it/dipartimento/" target="_blank">Università Cattolica</a></span> <span class="year">(04/2015 - 06/2015)</span></h3>
-							</div>
-							<div class="item">
-								<h3 class="title">Internship - <span class="place"><a href="https://www.polimi.it/" target="_blank">Politecnico Milano</a></span> <span class="year">(06/2015 - 07/2015)</span></h3>
-						</div>
-
-
-						</div>
-					</div>
-				</section>
-			</div>
+			</div> <!-- End Main Sections -->
 			<div class="secondary col-lg-4 col-12">
 				<aside class="info aside section">
 					<div class="section-inner">
@@ -152,20 +173,23 @@
 											 <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
 								</li>
 								<li class="item">
-									<span class="title"><strong>Python <a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=c4120ad89407399350f041cd454629cc0ea21412" title="Certificate: Fast Web Digital Academy - Python" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a><a href="https://goo.gl/pfo2WZ" title="Certificate: Cybray - Python for Security Professionals"target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
-									<br class="visible-sm visible-xs"/> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+									<span class="title"><strong>Python
+																	<a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=9d30624088e4a1b8c7a4caad85817125f76dae51" title="Certificate: Fast Web Digital Academy - Python Advanced" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
+																	<a href="https://learn.fastwebdigital.academy/badges/badge.php?hash=c4120ad89407399350f041cd454629cc0ea21412" title="Certificate: Fast Web Digital Academy - Python" target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
+																	<a href="https://goo.gl/pfo2WZ" title="Certificate: Cybray - Python for Security Professionals"target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a>
+									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
 									<span class="title"><strong>Cisco Routing and Switching <a href="https://drive.google.com/file/d/1N3vsV2aA6A1cyB7DTx6x86krNEYRdaRP/view?usp=sharing" title="Certiciate: CISCO - ICDN1 (CCNA 1)"target="_blank"><i class="fas fa-award" style="color:#7095d1;"></i></a></strong></span>
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
-									<span class="title"><strong>VMware vSphere 6.5 Foundations <a href="https://www.youracclaim.com/badges/de63ccca-64d6-48a0-81d7-3ef38618b16b/linked_in_profile" target="_blank" title="Certificate: VMware vSphere 6.5 Foundations "><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
+									<span class="title"><strong>VMware vSphere<a href="https://www.youracclaim.com/badges/de63ccca-64d6-48a0-81d7-3ef38618b16b/linked_in_profile" target="_blank" title="Certificate: VMware vSphere 6.5 Foundations "><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
 									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
-									<span class="title"><strong>SQL Fundamentals <a href="https://www.sololearn.com/Certificate/1060-11760385/pdf/" target="_blank" title="Certificate: Solo Learn - SQL Fundamentals"><i class="fas fa-award"style="color:#7095d1;"></i></a><a href="https://goo.gl/XYhHrL" target="_blank" title="Certificate: Cybrary - SQL Injection"><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
-									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></span>
+									<span class="title"><strong>SQL & NoSQL <a href="https://www.sololearn.com/Certificate/1060-11760385/pdf/" target="_blank" title="Certificate: Solo Learn - SQL Fundamentals"><i class="fas fa-award"style="color:#7095d1;"></i></a><a href="https://goo.gl/XYhHrL" target="_blank" title="Certificate: Cybrary - SQL Injection"><i class="fas fa-award"style="color:#7095d1;"></i></a></strong></span>
+									<br class="visible-sm visible-xs"/><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></span>
 								</li>
 								<li class="item">
 									<span class="title"><strong>Windows Server 2016 </strong></span>
@@ -190,13 +214,14 @@
 								<h6 class="university"><span class="year">Grade 10/10 with scholarship</span></h6>
 							</div>
 							<div class="item">
-								<h3 class="title"><i class="fas fa-graduation-cap"></i> High Diploma</h3>
+								<h3 class="title"><i class="fas fa-graduation-cap"></i> Diploma</h3>
 								<h4 class="university">IIS Janello Torriani, Cremona <span class="year">(2011-2016)</span></h4>
 								<h6 class="university"><span class="year">Grade 85/100</span></h6>
 							</div>
 							<div class="item">
 									<h3 class="title"><i class="fas fa-graduation-cap"></i> Diploma of specialization</h3>
 									<h4 class="university">ITS Angelo Rizzoli, Milano <span class="year">(2017-2019)</span></h4>
+								  <h6 class="university"><span class="year">Grade 96/100</span></h6>
 								</div>
 						</div>
 					</div>
@@ -230,38 +255,6 @@
 					</div>
 				</aside>
 			</div>
-<div class="row">
-	<div class="primary col-lg-12 col-12">
-		<section class="blog section">
-					<div class="section-inner">
-						<h2 class="heading">Learning and Reading</h2>
-						<p>These are books I read. My review and opinion about some of them can be found in blog posts.</p>
-<div class="flex-container">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-    <div>4</div>
-      <div>5</div>  
-        <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-    <div>4</div>
-      <div>5</div>  
-        <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-    <div>4</div>
-      <div>5</div>  
-        <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-    <div>4</div>
-      <div>5</div>
-</div>
-					</div>
-				</section>
-	</div>
-</div>			
 		</div>
 	</div>
 	<footer class="footer">
